--- a/css/estadaodados.css
+++ b/css/estadaodados.css
@@ -151,7 +151,9 @@ div.div-botao-eleicao .input-group {
 }
 
 .recorte {
-  padding-right: 165px;
+  /*padding-right: 165px;*/
+  padding-top: 10px;
+  padding-bottom: 15px;
 }
 
 /*@media screen and (max-width: 768px ) {*/
@@ -174,7 +176,7 @@ div.div-botao-eleicao .input-group {
 
 input.input-partidos {
   display: inline-block;
-  width: 75%;
+  /*width: 15%;*/
 }
 
 input[type='range'] {
@@ -282,7 +284,7 @@ div.legenda-in {
 .legenda-inner { 
   background-color: #555;
   color: #FFF;
-  max-width: 240px;
+  /*max-width: 240px;*/
   padding: 5px 8px 4px 8px;
   text-align: left;
 }
